--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -44,10 +44,10 @@
     </servlet>    
     <servlet-mapping>    
         <servlet-name>SpringMVC</servlet-name>    
-        <url-pattern>/</url-pattern>    
+        <url-pattern>*.do</url-pattern>    
     </servlet-mapping>    
     <welcome-file-list>    
-        <welcome-file>/index.jsp</welcome-file>    
+        <welcome-file>index.html</welcome-file>    
     </welcome-file-list>    
     
 </web-app>    
